--- a/src/components/preview-card/preview-card.css
+++ b/src/components/preview-card/preview-card.css
@@ -3,6 +3,7 @@
 }
 
 .card {
+  font-family: system-ui,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
   background-color: #fff;
   box-shadow: 0 2px 8px 0 rgba(166,191,217,.25);
   margin: 1rem 0;
@@ -10,7 +11,25 @@
   border-radius: .25rem;
   width: 100%;
   padding: 10px;
-  font-family: system-ui,BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  display: flex;
+}
+
+.muted {
+  color:rgb(96, 103, 112);
+}
+
+.error {
+  color: rgb(200, 47, 47);
+}
+
+.loader {
+  align-self: center;
+  text-align: center;
+  width: 100%;
+}
+
+.card.small {
+  height: 200px;
 }
 
 .card__link, .card__link:visited {
@@ -18,21 +37,30 @@
   color: inherit;
 }
 
-.card__title {
-  font-weight: bold;
+.card__content {
   padding: 5px;
 }
 
+.card__title {
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+
+.card__host {
+  padding-bottom: 5px;
+}
+
 .card__description {
+  padding: 5px 0;
+  font-size: 13px;
+}
+
+.card__img {
+  width: 100%;
   padding: 5px;
 }
 
 .card__img img {
   width: 100%;
-  height: auto;
-  padding: 5px;
+  height: 100%;
 }
-
-
-
-
